[package]
name = "qadapt"
version = "0.7.1"
authors = ["Bradlee Speice <bradlee@speice.io>"]
description = "The Quick And Dirty Allocation Profiling Tool"
license = "Apache-2.0"
readme = "README.md"
categories = [
    "development-tools",
    "development-tools::debugging",
    "development-tools::profiling",
    "development-tools::testing",
    "memory-management"
]
repository = "https://github.com/bspeice/qadapt.git"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libc = "0.2"
spin = { git = "https://github.com/bspeice/spin-rs.git" }
thread-id = "3.3"

qadapt-macro = { version = "0.7.1", path = "./qadapt-macro" }

[dev-dependencies]
futures = "0.1"
