[package]
name = "qadapt-macro"
version = "1.0.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
description = "The Quick And Dirty Allocation Profiling Tool - Support Macros"
license = "Apache-2.0"
readme = "README.md"
categories = [
    "development-tools",
    "development-tools::debugging",
    "development-tools::profiling",
    "development-tools::testing",
    "memory-management"
]
repository = "https://github.com/bspeice/qadapt.git"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true
